// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HighlightCard should render 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#303030",
          "borderRadius": 16,
          "marginHorizontal": 16,
          "marginVertical": 12,
          "shadowColor": "rgba(165, 165, 165, 0.30000000000000004)",
          "shadowOffset": Object {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 6,
        }
      }
    >
      <View
        style={
          Object {
            "aspectRatio": undefined,
            "borderRadius": 16,
            "overflow": "hidden",
          }
        }
      >
        <View
          animate={null}
          customAnimate={null}
          onReady={false}
          style={
            Object {
              "aspectRatio": 1,
              "backgroundColor": "#A5A5A5",
              "width": "100%",
            }
          }
        >
          <Image
            maxAspectRatio={1.2}
            minAspectRatio={0.75}
            onLoad={[Function]}
            overlayColor="#00676D"
            source={
              Array [
                Object {
                  "cache": "force-cache",
                  "uri": "https://picsum.photos/800/1600/?random",
                },
              ]
            }
            style={
              Object {
                "backgroundColor": "#A5A5A5",
                "opacity": 0,
              }
            }
          />
        </View>
        <BVLinearGradient
          colors={
            Array [
              1291845632,
              2566914048,
            ]
          }
          endPoint={
            Object {
              "x": 0,
              "y": 1,
            }
          }
          locations={
            Array [
              0,
              1,
            ]
          }
          startPoint={
            Object {
              "x": 0,
              "y": 0,
            }
          }
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <View
          style={
            Object {
              "alignItems": "flex-end",
              "bottom": 0,
              "flexDirection": "row",
              "paddingBottom": 32,
              "paddingHorizontal": 24,
              "paddingVertical": 16,
              "position": "absolute",
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <Text
              numberOfLines={4}
              style={
                Object {
                  "color": "#F8F7F4",
                  "fontFamily": "InterUI-Black",
                  "fontSize": 24,
                  "lineHeight": 27.6,
                }
              }
            >
              Are you telling me that you built a time machine out of a DeLorean?
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`HighlightCard should render a default actionIcon ("play") with onPressAction 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#303030",
          "borderRadius": 16,
          "marginHorizontal": 16,
          "marginVertical": 12,
          "shadowColor": "rgba(165, 165, 165, 0.30000000000000004)",
          "shadowOffset": Object {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 6,
        }
      }
    >
      <View
        style={
          Object {
            "aspectRatio": undefined,
            "borderRadius": 16,
            "overflow": "hidden",
          }
        }
      >
        <View
          animate={null}
          customAnimate={null}
          onReady={false}
          style={
            Object {
              "aspectRatio": 1,
              "backgroundColor": "#A5A5A5",
              "width": "100%",
            }
          }
        >
          <Image
            maxAspectRatio={1.2}
            minAspectRatio={0.75}
            onLoad={[Function]}
            overlayColor="#00676D"
            source={
              Array [
                Object {
                  "cache": "force-cache",
                  "uri": "https://picsum.photos/800/1600/?random",
                },
              ]
            }
            style={
              Object {
                "backgroundColor": "#A5A5A5",
                "opacity": 0,
              }
            }
          />
        </View>
        <BVLinearGradient
          colors={
            Array [
              1291845632,
              2566914048,
            ]
          }
          endPoint={
            Object {
              "x": 0,
              "y": 1,
            }
          }
          locations={
            Array [
              0,
              1,
            ]
          }
          startPoint={
            Object {
              "x": 0,
              "y": 0,
            }
          }
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <View
          style={
            Object {
              "alignItems": "flex-end",
              "bottom": 0,
              "flexDirection": "row",
              "paddingBottom": 32,
              "paddingHorizontal": 24,
              "paddingVertical": 16,
              "position": "absolute",
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <Text
              numberOfLines={4}
              style={
                Object {
                  "color": "#F8F7F4",
                  "fontFamily": "InterUI-Black",
                  "fontSize": 24,
                  "lineHeight": 27.6,
                }
              }
            >
              Are you telling me that you built a time machine out of a DeLorean?
            </Text>
          </View>
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              additionalStyles={
                Object {
                  "backgroundColor": Object {
                    "color": Array [
                      248,
                      247,
                      244,
                    ],
                    "model": "rgb",
                    "valpha": 0.1,
                  },
                  "marginLeft": 16,
                }
              }
              borderRadius={36}
              iconPadding={12}
              style={
                Object {
                  "backgroundColor": Object {
                    "color": Array [
                      248,
                      247,
                      244,
                    ],
                    "model": "rgb",
                    "valpha": 0.1,
                  },
                  "marginLeft": 16,
                  "padding": 12,
                }
              }
            >
              <RNSVGSvgView
                align="xMidYMid"
                bbHeight={24}
                bbWidth={24}
                height={24}
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    undefined,
                    Object {
                      "opacity": 1,
                    },
                    Object {
                      "flex": 0,
                      "height": 24,
                      "width": 24,
                    },
                  ]
                }
                vbHeight={24}
                vbWidth={24}
                width={24}
              >
                <RNSVGGroup
                  fill={
                    Array [
                      0,
                      4278190080,
                    ]
                  }
                  fillOpacity={1}
                  fillRule={1}
                  font={Object {}}
                  matrix={
                    Array [
                      1,
                      0,
                      0,
                      1,
                      0,
                      0,
                    ]
                  }
                  opacity={1}
                  originX={0}
                  originY={0}
                  propList={Array []}
                  rotation={0}
                  scaleX={1}
                  scaleY={1}
                  skewX={0}
                  skewY={0}
                  stroke={null}
                  strokeDasharray={null}
                  strokeDashoffset={null}
                  strokeLinecap={0}
                  strokeLinejoin={0}
                  strokeMiterlimit={4}
                  strokeOpacity={1}
                  strokeWidth={1}
                  vectorEffect={0}
                  x={0}
                  y={0}
                >
                  <RNSVGPath
                    d="m6,3.34c0,-1.3 0.88,-1.73 1.97,-0.95l11.05,7.9c1.1,0.8 1.1,2.06 0.04,2.86l-11.13,8.4c-1.07,0.85 -1.93,0.45 -1.93,-0.85l0,-17.36z"
                    fill={
                      Array [
                        0,
                        4294506484,
                      ]
                    }
                    fillOpacity={1}
                    fillRule={1}
                    matrix={
                      Array [
                        1,
                        0,
                        0,
                        1,
                        0,
                        0,
                      ]
                    }
                    opacity={1}
                    originX={0}
                    originY={0}
                    propList={
                      Array [
                        "fill",
                      ]
                    }
                    rotation={0}
                    scaleX={1}
                    scaleY={1}
                    skewX={0}
                    skewY={0}
                    stroke={null}
                    strokeDasharray={null}
                    strokeDashoffset={null}
                    strokeLinecap={0}
                    strokeLinejoin={0}
                    strokeMiterlimit={4}
                    strokeOpacity={1}
                    strokeWidth={1}
                    vectorEffect={0}
                    x={0}
                    y={0}
                  />
                </RNSVGGroup>
              </RNSVGSvgView>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`HighlightCard should render with a custom actionIcon 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#303030",
          "borderRadius": 16,
          "marginHorizontal": 16,
          "marginVertical": 12,
          "shadowColor": "rgba(165, 165, 165, 0.30000000000000004)",
          "shadowOffset": Object {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 6,
        }
      }
    >
      <View
        style={
          Object {
            "aspectRatio": undefined,
            "borderRadius": 16,
            "overflow": "hidden",
          }
        }
      >
        <View
          animate={null}
          customAnimate={null}
          onReady={false}
          style={
            Object {
              "aspectRatio": 1,
              "backgroundColor": "#A5A5A5",
              "width": "100%",
            }
          }
        >
          <Image
            maxAspectRatio={1.2}
            minAspectRatio={0.75}
            onLoad={[Function]}
            overlayColor="#00676D"
            source={
              Array [
                Object {
                  "cache": "force-cache",
                  "uri": "https://picsum.photos/800/1600/?random",
                },
              ]
            }
            style={
              Object {
                "backgroundColor": "#A5A5A5",
                "opacity": 0,
              }
            }
          />
        </View>
        <BVLinearGradient
          colors={
            Array [
              1291845632,
              2566914048,
            ]
          }
          endPoint={
            Object {
              "x": 0,
              "y": 1,
            }
          }
          locations={
            Array [
              0,
              1,
            ]
          }
          startPoint={
            Object {
              "x": 0,
              "y": 0,
            }
          }
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <View
          style={
            Object {
              "alignItems": "flex-end",
              "bottom": 0,
              "flexDirection": "row",
              "paddingBottom": 32,
              "paddingHorizontal": 24,
              "paddingVertical": 16,
              "position": "absolute",
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <Text
              numberOfLines={4}
              style={
                Object {
                  "color": "#F8F7F4",
                  "fontFamily": "InterUI-Black",
                  "fontSize": 24,
                  "lineHeight": 27.6,
                }
              }
            >
              Are you telling me that you built a time machine out of a DeLorean?
            </Text>
          </View>
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              additionalStyles={
                Object {
                  "backgroundColor": Object {
                    "color": Array [
                      248,
                      247,
                      244,
                    ],
                    "model": "rgb",
                    "valpha": 0.1,
                  },
                  "marginLeft": 16,
                }
              }
              borderRadius={36}
              iconPadding={12}
              style={
                Object {
                  "backgroundColor": Object {
                    "color": Array [
                      248,
                      247,
                      244,
                    ],
                    "model": "rgb",
                    "valpha": 0.1,
                  },
                  "marginLeft": 16,
                  "padding": 12,
                }
              }
            >
              <RNSVGSvgView
                align="xMidYMid"
                bbHeight={24}
                bbWidth={24}
                height={24}
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    undefined,
                    Object {
                      "opacity": 1,
                    },
                    Object {
                      "flex": 0,
                      "height": 24,
                      "width": 24,
                    },
                  ]
                }
                vbHeight={32}
                vbWidth={32}
                width={24}
              >
                <RNSVGGroup
                  fill={
                    Array [
                      0,
                      4278190080,
                    ]
                  }
                  fillOpacity={1}
                  fillRule={1}
                  font={Object {}}
                  matrix={
                    Array [
                      1,
                      0,
                      0,
                      1,
                      0,
                      0,
                    ]
                  }
                  opacity={1}
                  originX={0}
                  originY={0}
                  propList={Array []}
                  rotation={0}
                  scaleX={1}
                  scaleY={1}
                  skewX={0}
                  skewY={0}
                  stroke={null}
                  strokeDasharray={null}
                  strokeDashoffset={null}
                  strokeLinecap={0}
                  strokeLinejoin={0}
                  strokeMiterlimit={4}
                  strokeOpacity={1}
                  strokeWidth={1}
                  vectorEffect={0}
                  x={0}
                  y={0}
                >
                  <RNSVGPath
                    d="M27 14h5c0-1.105-1.119-2-2.5-2s-2.5 0.895-2.5 2v0zM27 14c0-1.105-1.119-2-2.5-2s-2.5 0.895-2.5 2c0-1.105-1.119-2-2.5-2s-2.5 0.895-2.5 2v0 14c0 1.112-0.895 2-2 2-1.112 0-2-0.896-2-2.001v-1.494c0-0.291 0.224-0.505 0.5-0.505 0.268 0 0.5 0.226 0.5 0.505v1.505c0 0.547 0.444 0.991 1 0.991 0.552 0 1-0.451 1-0.991v-14.009c0-1.105-1.119-2-2.5-2s-2.5 0.895-2.5 2c0-1.105-1.119-2-2.5-2s-2.5 0.895-2.5 2c0-1.105-1.119-2-2.5-2s-2.5 0.895-2.5 2c0-5.415 6.671-9.825 15-9.995v-1.506c0-0.283 0.224-0.499 0.5-0.499 0.268 0 0.5 0.224 0.5 0.499v1.506c8.329 0.17 15 4.58 15 9.995h-5z"
                    fill={
                      Array [
                        0,
                        4294506484,
                      ]
                    }
                    fillOpacity={1}
                    fillRule={1}
                    matrix={
                      Array [
                        1,
                        0,
                        0,
                        1,
                        0,
                        0,
                      ]
                    }
                    opacity={1}
                    originX={0}
                    originY={0}
                    propList={
                      Array [
                        "fill",
                      ]
                    }
                    rotation={0}
                    scaleX={1}
                    scaleY={1}
                    skewX={0}
                    skewY={0}
                    stroke={null}
                    strokeDasharray={null}
                    strokeDashoffset={null}
                    strokeLinecap={0}
                    strokeLinejoin={0}
                    strokeMiterlimit={4}
                    strokeOpacity={1}
                    strokeWidth={1}
                    vectorEffect={0}
                    x={0}
                    y={0}
                  />
                </RNSVGGroup>
              </RNSVGSvgView>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`HighlightCard should render with a custom theme 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#303030",
          "borderRadius": 16,
          "marginHorizontal": 16,
          "marginVertical": 12,
          "shadowColor": "rgba(165, 165, 165, 0.30000000000000004)",
          "shadowOffset": Object {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 6,
        }
      }
    >
      <View
        style={
          Object {
            "aspectRatio": undefined,
            "borderRadius": 16,
            "overflow": "hidden",
          }
        }
      >
        <View
          animate={null}
          customAnimate={null}
          onReady={false}
          style={
            Object {
              "aspectRatio": 1,
              "backgroundColor": "#A5A5A5",
              "width": "100%",
            }
          }
        >
          <Image
            maxAspectRatio={1.2}
            minAspectRatio={0.75}
            onLoad={[Function]}
            overlayColor="salmon"
            source={
              Array [
                Object {
                  "cache": "force-cache",
                  "uri": "https://picsum.photos/800/1600/?random",
                },
              ]
            }
            style={
              Object {
                "backgroundColor": "#A5A5A5",
                "opacity": 0,
              }
            }
          />
        </View>
        <BVLinearGradient
          colors={
            Array [
              1291845632,
              2566914048,
            ]
          }
          endPoint={
            Object {
              "x": 0,
              "y": 1,
            }
          }
          locations={
            Array [
              0,
              1,
            ]
          }
          startPoint={
            Object {
              "x": 0,
              "y": 0,
            }
          }
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <View
          style={
            Object {
              "alignItems": "flex-end",
              "bottom": 0,
              "flexDirection": "row",
              "paddingBottom": 32,
              "paddingHorizontal": 24,
              "paddingVertical": 16,
              "position": "absolute",
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <Text
              numberOfLines={4}
              style={
                Object {
                  "color": "#F8F7F4",
                  "fontFamily": "InterUI-Black",
                  "fontSize": 24,
                  "lineHeight": 27.6,
                }
              }
            >
              Are you telling me that you built a time machine out of a DeLorean?
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`HighlightCard should render with a description 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#303030",
          "borderRadius": 16,
          "marginHorizontal": 16,
          "marginVertical": 12,
          "shadowColor": "rgba(165, 165, 165, 0.30000000000000004)",
          "shadowOffset": Object {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 6,
        }
      }
    >
      <View
        style={
          Object {
            "aspectRatio": undefined,
            "borderRadius": 16,
            "overflow": "hidden",
          }
        }
      >
        <View
          animate={null}
          customAnimate={null}
          onReady={false}
          style={
            Object {
              "aspectRatio": 1,
              "backgroundColor": "#A5A5A5",
              "width": "100%",
            }
          }
        >
          <Image
            maxAspectRatio={1.2}
            minAspectRatio={0.75}
            onLoad={[Function]}
            overlayColor="#00676D"
            source={
              Array [
                Object {
                  "cache": "force-cache",
                  "uri": "https://picsum.photos/800/1600/?random",
                },
              ]
            }
            style={
              Object {
                "backgroundColor": "#A5A5A5",
                "opacity": 0,
              }
            }
          />
        </View>
        <BVLinearGradient
          colors={
            Array [
              1291845632,
              2566914048,
            ]
          }
          endPoint={
            Object {
              "x": 0,
              "y": 1,
            }
          }
          locations={
            Array [
              0,
              1,
            ]
          }
          startPoint={
            Object {
              "x": 0,
              "y": 0,
            }
          }
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <View
          style={
            Object {
              "alignItems": "flex-end",
              "bottom": 0,
              "flexDirection": "row",
              "paddingBottom": 32,
              "paddingHorizontal": 24,
              "paddingVertical": 16,
              "position": "absolute",
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <Text
              numberOfLines={3}
              style={
                Object {
                  "color": "#F8F7F4",
                  "fontFamily": "InterUI-Black",
                  "fontSize": 24,
                  "lineHeight": 27.6,
                }
              }
            >
              Are you telling me that you built a time machine out of a DeLorean?
            </Text>
            <Text
              bold={false}
              italic={false}
              numberOfLines={2}
              style={
                Object {
                  "color": "#F8F7F4",
                  "fontFamily": "InterUI-Regular",
                  "fontSize": 16,
                  "lineHeight": 26,
                  "marginTop": 16,
                }
              }
            >
              The way I see it, if you’re going to build a time machine into a car, why not do it with some style?
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;
